TESTING: added new Unit tests for Front End